--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,8 @@ social:
   email: info@bluecomment.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
     - https://github.com/lijotech # change to your github homepage
+    - https://twitter.com/lijotech # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/lijotech
